force-app/main/default/objects/Employee__c/fields/curr__c.field-meta.xml
<CustomField>
    <fullName>curr__c</fullName>
    <formula>(Currency__c  / 100) * 80</formula>
    <label>curr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>