force-app/main/default/objects/Employee__c/fields/DNo_Street__c.field-meta.xml
<CustomField>
    <fullName>DNo_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DNo &amp; Street</label>
    <length>25</length>
    <type>Text</type>
</CustomField>