force-app/main/default/objects/Employee__c/fields/My_Description__c.field-meta.xml
<CustomField>
    <fullName>My_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>My Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>