force-app/main/default/objects/Employee__c/fields/PinCode__c.field-meta.xml
<CustomField>
    <fullName>PinCode__c</fullName>
    <label>PinCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>