force-app/main/default/objects/Employee__c/fields/Sal__c.field-meta.xml
<CustomField>
    <fullName>Sal__c</fullName>
    <formula>1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>