force-app/main/default/objects/Employee__c/fields/todaydate__c.field-meta.xml
<CustomField>
    <fullName>todaydate__c</fullName>
    <formula>CreatedDate - 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>todaydate</label>
    <type>Date</type>
</CustomField>