force-app/main/default/objects/Employee__c/recordTypes/New_Emp.recordType-meta.xml
<RecordType>
    <fullName>New_Emp</fullName>
    <active>true</active>
    <label>New Emp</label>
</RecordType>