force-app/main/default/objects/Employee__c/recordTypes/Old_Emp.recordType-meta.xml
<RecordType>
    <fullName>Old_Emp</fullName>
    <active>true</active>
    <label>Old Emp</label>
</RecordType>